[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/frog.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/bloodknight.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Racoonhealth.png" type="Texture" id=4]
[ext_resource path="res://Jump/sounds/jump1.ogg" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=6]
radius = 24.0

[sub_resource type="Animation" id=2]
resource_name = "Health"
length = 0.2

[sub_resource type="Animation" id=3]
length = 0.001

[sub_resource type="Animation" id=4]
resource_name = "Test"
length = 1.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 30.25 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 59, 1 )
collision_mask = 0
script = ExtResource( 2 )

[node name="Frog" type="Sprite" parent="."]
visible = false
position = Vector2( -176, 50 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3, 1 )
shape = SubResource( 6 )

[node name="Bloodknight" type="Sprite" parent="."]
position = Vector2( 0, -1 )
scale = Vector2( 0.290625, 0.280176 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.544
one_shot = true

[node name="racoon" type="Sprite" parent="."]
visible = false
position = Vector2( 227, 49.5 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
hframes = 3
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="racoon"]
anims/Health = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/Test = SubResource( 4 )

[node name="Sound_Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -30.0
pitch_scale = 1.29

[node name="WallChecker" type="RayCast2D" parent="."]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 35 )
collision_mask = 2

[node name="LadderChecker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="LadderChecker"]
position = Vector2( -3, 5.25 )
shape = SubResource( 5 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="LadderChecker" to="." method="_on_LadderChecker_body_entered"]
[connection signal="body_exited" from="LadderChecker" to="." method="_on_LadderChecker_body_exited"]
